# homelab-ai

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
.github/workflows/: model-deployment.yml
docs/: todo_list.md
docs/diagrams/: ai_inference_architecture.md  model_deployment_pipeline.md  model_optimization_pipelines.md  voice_assistant_pipeline.md
home-assistant/integration/: README.md
home-assistant/notifications/: config.py  content_personalizer.py  event_summarizer.py  ha_client.py  nl_generator.py  notification_prioritizer.py  notification_service.py  run_service.py  triton_client.py
home-assistant/tests/: README.md  test_integration.py
home-assistant/voice-pipeline/: __init__.py  __main__.py  audio.py  config.py  intent_resolver.py  nlu.py  pipeline.py  requirements.txt  stt.py  triton_client.py  tts.py  wake_word.py
ray/scripts/: config.py  example_usage.py  gpu_manager.py  main.py  ray_resource_mgmt.md  resource_monitor.py  task_scheduler.py  triton_integration.py
ray/tests/: test_ray_cluster.py
scripts/: setup-model-repository.sh
src/homelab_ai/: __init__.py
triton/model-api/: Dockerfile  docker-compose.yml  main.py  requirements.txt
triton/scripts/: config.py  download_manager.py  llm_benchmarks.py  main.py  model-backup.py  model_benchmark.py  model_converter.py  model_pruner.py  model_quantizer.py  requirements.txt  tensorrt_optimizer.py  utils.py
triton/security/: input-validation.py  model-access-control.py  output-filtering.py  rate-limiting.py  secure-model-updates.py
(+50 files in other folders)
